# liauth

./: .editorconfig  .gitattributes  .gitignore  .swiftformat  Cargo.toml  LICENSE  README.de.md  README.es.md  README.fr.md  README.md  README.ru.md  README.zh.md  rustfmt.toml
.github/workflows/: android.yml  apple.yml  ci.yml  windows.yml
android/: .editorconfig  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/liwidale/liauth/: LiAuthApplication.kt  MainActivity.kt
android/app/src/main/java/com/liwidale/liauth/autofill/: LiAuthAutofillService.kt
android/app/src/main/java/com/liwidale/liauth/core/: CrashReporter.kt  DeviceKeystore.kt  Localization.kt  Qr.kt
android/app/src/main/java/com/liwidale/liauth/ui/: Components.kt  LiAuthIcons.kt
android/app/src/main/java/com/liwidale/liauth/ui/screens/: AddScreen.kt  EditSheet.kt  HomeScreen.kt  LockScreen.kt  SettingsScreen.kt  SyncScreen.kt  TrashScreen.kt
android/app/src/main/java/com/liwidale/liauth/ui/theme/: Theme.kt
android/app/src/main/java/com/liwidale/liauth/vault/: EngineHolder.kt  VaultViewModel.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: autofill_item.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml
android/app/src/main/res/xml/: autofill_service.xml
android/gradle/: libs.versions.toml
apple/: project.yml
apple/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
apple/Sources/App/: LiAuthApp.swift
apple/Sources/Core/: DeviceKeychain.swift  Localization.swift  VaultStore.swift
apple/Sources/UI/: Components.swift  Theme.swift
apple/Sources/Views/: AddView.swift  EditView.swift  HomeView.swift  LockView.swift  QrScannerView.swift  SettingsView.swift  SyncView.swift  TrashView.swift
apple/Support/: Info-iOS.plist  Info-macOS.plist  LiAuth.entitlements
apple/scripts/: build-xcframework.sh
assets/icons/: README.md
branding/: branding.json
core/liauth-core/: Cargo.toml
core/liauth-core/src/: base32.rs  error.rs  lib.rs  lockout.rs  model.rs  otp.rs  search.rs  sntp.rs  time.rs  uri.rs
core/liauth-crypto/: Cargo.toml
core/liauth-crypto/src/: envelope.rs  kdf.rs  keys.rs  lib.rs
core/liauth-ffi/: Cargo.toml
core/liauth-ffi/src/: engine.rs  lib.rs  types.rs
core/liauth-import/: Cargo.toml
core/liauth-import/src/: aegis.rs  authy.rs  google.rs  lib.rs  twofas.rs  uri_list.rs
core/liauth-sync/: Cargo.toml
core/liauth-sync/src/: channel.rs  discovery.rs  lib.rs  receiver.rs  sender.rs  webdav.rs
core/liauth-vault/: Cargo.toml
core/liauth-vault/src/: backup.rs  lib.rs  lockout.rs  manager.rs  store.rs
localization/: de.json  en.json  es.json  fr.json  ru.json  zh.json
scripts/: generate-icons.sh
website/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/components/: AppRender.tsx  Faq.tsx  FeatureGrid.tsx  Hero.tsx  OpenSource.tsx  Philosophy.tsx  Reveal.tsx  RotatingWord.tsx  Section.tsx  SecurityArchitecture.tsx  SiteFooter.tsx  SiteHeader.tsx  icons.tsx
website/lib/: site.ts
windows/: Cargo.toml  build.rs
windows/src/: app.rs  i18n.rs  icons.rs  main.rs  prefs.rs  qr.rs  security.rs  theme.rs  toast.rs
windows/src/views/: add.rs  edit.rs  home.rs  lock.rs  mod.rs  settings.rs  sync.rs  trash.rs  widgets.rs
