[package]
name = "liauth-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
