[package]
name = "liauth-import"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
liauth-core = { workspace = true }
liauth-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
aes-gcm = { workspace = true }
scrypt = { workspace = true }
pbkdf2 = { workspace = true }
sha2 = { workspace = true }
