[package]
name = "liauth-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
liauth-crypto = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
spake2 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
mdns-sd = { workspace = true }
ureq = { workspace = true }
base64 = { workspace = true }
